[package]
authors = ["Robert Lynch <robertlynch2012@gmail.com>"]
edition = "2021"
name = "drg-save-parser"
version = "4.0.0"
license = "GPL-3.0"
repository = "https://github.com/BobertForever/drg-save-parser"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
gvas_save_parser = { path = "../gvas_save_parser" }
gloo-utils = { version = "0.1", features = ["serde"] }

[dependencies.web-sys]
features = [
  "File",
  "FileReader",
  "ProgressEvent",
  "EventTarget",
]
version = "0.3.49"